"""add is_private to notes, add private_note_members and notifications

Revision ID: 70ef68c5ed0f
Revises: a3f8b2c1d4e5
Create Date: 2026-06-26 04:23:20.713237

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '70ef68c5ed0f'
down_revision = 'a3f8b2c1d4e5'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('notifications',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('message', sa.String(length=500), nullable=False),
    sa.Column('link_url', sa.String(length=500), nullable=True),
    sa.Column('is_read', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('private_note_members',
    sa.Column('note_id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('role', sa.String(length=20), nullable=False),
    sa.Column('invited_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['note_id'], ['notes.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('note_id', 'user_id')
    )
    with op.batch_alter_table('notes', schema=None) as batch_op:
        # 既存レコードに false をセットするため server_default を指定し、追加後に削除する
        batch_op.add_column(sa.Column('is_private', sa.Boolean(), nullable=False, server_default=sa.text('false')))
    with op.batch_alter_table('notes', schema=None) as batch_op:
        batch_op.alter_column('is_private', server_default=None)

    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('notes', schema=None) as batch_op:
        batch_op.drop_column('is_private')

    op.drop_table('private_note_members')
    op.drop_table('notifications')
    # ### end Alembic commands ###
